apps/uptime-kuma/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${UPTIME_KUMA_NAMESPACE:-uptime-kuma}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
